--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,15 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+tokio = { version = "1.0", features = ["full"] }
+actix-web = "4"
+# sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_json = "1.0.140"
 once_cell = "1.18.0"
-thiserror = "2.0.11"
+thiserror = "2.0.12"
 log = "0.4"
 env_logger = "0.11"
-tokio = { version = "1.0", features = ["full"] }
 reqwest = { version = "0.12.12", features = ["json"] }
 jsonwebtoken = "9.2"
 chrono = "0.4"
@@ -18,5 +20,5 @@ futures = "0.3"
 rusqlite = { version = "0.33.0", features = ["bundled"] }
 r2d2 = "0.8"
 r2d2_sqlite = "0.26.0"
-anyhow = "1.0"
+anyhow = "1.0.97"
 lazy_static = "1.4"
