--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,18 @@
 [package]
 name = "broker"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+
+[profile.dev]
+debug = 2  # Максимальный уровень отладочной информации
 
 [dependencies]
-tokio = { version = "1.0", features = ["full"] }
-actix-web = "4"
-# sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
+tokio = { version = "1.43.0", features = ["full"] }
+actix-web = "4.9.0"
+sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.140"
-once_cell = "1.18.0"
+once_cell = "1.20.3"
 thiserror = "2.0.12"
 log = "0.4"
 env_logger = "0.11"
@@ -17,8 +20,11 @@ reqwest = { version = "0.12.12", features = ["json"] }
 jsonwebtoken = "9.2"
 chrono = "0.4"
 futures = "0.3"
-rusqlite = { version = "0.33.0", features = ["bundled"] }
-r2d2 = "0.8"
-r2d2_sqlite = "0.26.0"
-anyhow = "1.0.97"
-lazy_static = "1.4"
+# lazy_static = "1.4"
+# rusqlite = { version = "0.33.0", features = ["bundled"] }
+# r2d2 = "0.8"
+# r2d2_sqlite = "0.26.0"
+# anyhow = "1.0.97"
+
+[dev-dependencies]
+anyhow = "1.0"
