--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 debug = 2  # Максимальный уровень отладочной информации
 
 [dependencies]
-tokio = { version = "1.43.0", features = ["full"] }
+tokio = { version = "1.44.0", features = ["full"] }
 actix-web = "4.9.0"
 sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -16,10 +16,13 @@ once_cell = "1.20.3"
 thiserror = "2.0.12"
 log = "0.4"
 env_logger = "0.11"
+bytes = "1.10.1"
 reqwest = { version = "0.12.12", features = ["json"] }
-jsonwebtoken = "9.2"
 chrono = "0.4"
-futures = "0.3"
+futures = "0.3.31"
+# jsonwebtoken = "9.2"
+# futures = "0.3"
+# futures-util = "0.3.31"
 # lazy_static = "1.4"
 # rusqlite = { version = "0.33.0", features = ["bundled"] }
 # r2d2 = "0.8"
@@ -28,4 +31,6 @@ futures = "0.3"
 
 [dev-dependencies]
 anyhow = "1.0"
-tempfile = "3.10"
+tempfile = "3.18.0"
+actix-http = "3.10.0"
+mockall = "0.13.1"
